--- a/quiz_python/template.tex
+++ b/quiz_python/template.tex
@@ -29,7 +29,7 @@
     ,basicstyle=\linespread{1}\ttfamily
     ,keywordstyle=
     ,language=sh
-    ,showstringspaces=false
+    ,showstringspaces=true
     ,numbers=left
     ,breaklines=false
     ,numbers=left
